--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
         </div>
         <div class="file-input-wrapper">
+            <span class="app-version">V05</span>
             <input type="file" id="fileUpload" accept=".xlsx, .xls" />
         </div>
     </div>
@@ -350,5 +351,4 @@
 
 </body>
 </html>
-
 
