Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <button class="module-btn" onclick="switchModule('mod-titulo')">Agrup Titulo</button>
                 <button class="module-btn" onclick="switchModule('mod-balance2')">Balance</button>
             </div>
+            <button class="download-btn" onclick="exportToExcel()" title="Descargar Excel">
+                <span class="download-icon">&#x1F4E5;</span> Descargar
+            </button>
         </div>
         <div class="file-input-wrapper">
             <span class="app-version">V07</span>
@@ -350,6 +353,7 @@
 <script src="js/materia.js"></script>
 <script src="js/titulo.js"></script>
 <script src="js/balance.js"></script>
+<script src="js/excel.js"></script>
 
 </body>
 </html>
